Implement code generation support for value classes
Reviewed-by: fparain